--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                <div class="row">
                   <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                      <div class="row">
-                        <div class="col-xs-12 col-md-5 pull-left quick-contact">
+                        <div class="col-xs-12 col-md-4 pull-left quick-contact">
                            <i class="fa fa-envelope-o"></i>
                            <p><span></span><a href="mailto:info@caliberclubco.com">info@caliberclubco.com</a>
                            </p>
@@ -237,7 +237,7 @@
       </div>
 
       <!-- Banner-bottom -->
-      <div class="bnr-bttm" id="bnr-bottom">
+      <!-- <div class="bnr-bttm" id="bnr-bottom">
          <div class="container">
             <div class="row bnr-bttm">
                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 bnr-bttm-col col-brdr">
@@ -265,7 +265,7 @@
 
          </div>
 
-      </div>
+      </div> -->
 
 
       <!-- // #start -->
@@ -579,7 +579,7 @@
                      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" id="below5">
                         <div class="text-box">
                            <div class="title">
-                              <h3>ACCESORIES</h3>
+                              <h3>ACCESSORIES</h3>
                            </div>
                            <div class="boximg"><img src="img/accesories.png"></div>
                            
